@@ -26,6 +26,8 @@ and needs also to be updated sql expression strings compiled with SQLEngine::tra
 ** removed SubjectSettingsFilter, SessionAttributesManager, SessionAttribute servlet, bcdui.config.security, client sided setting is done now via SubjectPreferences with bcdui/conf/subjectPreferences.xml as config.
 * ensure adding bcd_userId:userId and bcd_i18n:lang to subjectSettings.xml
 * removed bcdBean creationStamp, use bcdBean.currentTimestampUtc instead which is the date string in UTC timezone
+* bcd_virtualFileSystem additionally got vfsPathLimit SubjectFilter which limits read/write access on the VFS. Ensure to add user rights (or default values) for:
+at least cube template writing /vfs/reports/*, detail export column selects /vfs/exports/*, docUploads /vfs/documents/*. Writing vfs bindings could be achieved via /WEB-INF/*/virtual/*.
 
 .Server:
 * Wrq does support CTE common table expressions, joins and unions now
